--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,5 @@
 @import '~antd/dist/antd.css';
-
-
+/* 
 :root {
   --primaryColor: hsl(209, 34%, 30%);
   --attentionColor: #f5a718;
@@ -17,7 +16,6 @@
   --darkThemeText: #c9d1d9;
 
   --clr-grey-4: hsl(209, 28%, 39%);
-  /* grey used for paragraphs */
   --grayColor: hsl(210, 22%, 49%);
   --clr-grey-8: hsl(210, 31%, 80%);
   --clr-green-dark: hsl(125, 67%, 35%);
@@ -33,7 +31,17 @@
   --dark-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
 }
 
-.wrapperGlobal{
+ul,
+li {
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  list-style: none;
+}
+
+.wrapperGlobal {
   display: grid;
   grid-template-rows: auto 1fr auto;
   min-height: 100vh;
@@ -45,3 +53,5 @@
   padding-left: 15px;
   padding-right: 15px;
 }
+ */
+
